# AI-Assessment-Platform

./: .gitignore  app.py  main.py  pyproject.toml  requirements.txt
